# gpyrobotstxt

./: README.md  pyproject.toml  robots_main.py  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  python-package.yml  unittest.yml
gpyrobotstxt/: __init__.py  match.py  parsedrobotskey.py  robots_cc.py  robotsmatchstrategy.py  robotstxtparser.py
pyrobotstxt/: __init__.py  parsedrobotskey.py  robots_cc.py  robotsmatchstrategy.py  robotstxtparser.py
test/: test_get_path_params_query.py  test_google_only_system.py  test_maybe_escape_pattern.py  test_robots_matcher.py
