[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpyrobotstxt"
authors = [{name = "CoconSe", email = "blog@cocon.se"}]
description = "A pure Python port of Google's robots.txt parser and matcher"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Cocon-Se/gpyrobotstxt"
Issues = "https://github.com/Cocon-Se/gpyrobotstxt/issues"